--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "course-scheduling-chatbot",
   "version": "0.1.0",
+  "homepage": "http://lwinkley1.github.io/course-scheduling-chatbot",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
